<resources>
    <string name="general_app_name">SkywireVPN</string>
    <string name="general_notification_channel_description">SkywireVPN status notifications.</string>
    <string name="general_alert_notification_name">SkywireVPN Alerts</string>
    <string name="general_alert_notification_channel_description">SkywireVPN important alert notifications.</string>
    <string name="general_service_description">SkywireVPN networking service.</string>
    <string name="general_seconds_abbreviation">s.</string>
    <string name="general_milliseconds_abbreviation">ms.</string>
    <string name="general_options">Options</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_close">Close</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_unknown">Unknown</string>
    <string name="general_copied">Copied to clipboard.</string>
    <string name="rating_gold">Gold</string>
    <string name="rating_silver">Silver</string>
    <string name="rating_bronze">Bronze</string>
    <string name="general_autostart_failed_error">Unable to start the VPN protection.</string>
    <string name="general_no_permissions_error">SkywireVPN does not have the necessary permissions for activating the VPN service. Please use the app to start the VPN protection.</string>
    <string name="general_connection_error">There has been an error with the SkywireVPN service. The VPN protection is disabled.</string>
    <string name="general_starting_blocked_server_error">Unable to connect to the selected server because it has been added to the blocked servers list.</string>
    <string name="general_server_running_error">Please stop the VPN before using this option.</string>
    <string name="general_service_running_notification">The VPN service continues running. See the notification for more information.</string>
    <string name="skywiremob_error_no_server">The VPN protection cannot be started because no server has been selected.</string>
    <string name="skywiremob_error_server_blocked">The VPN protection cannot be started because the selected server is in the blocked list.</string>
    <string name="skywiremob_error_invalid_pk">Invalid public key. Are you connecting to a valid VPN server?</string>
    <string name="skywiremob_error_invalid_visor_config">Unexpected error. The local visor configuration is not valid.</string>
    <string name="skywiremob_error_invalid_addr_resolver_url">It was not possible to access the address resolver. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_stcp_init_failed">Error initializing the STCP connection. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_stcpr_init_failed">Error initializing the STCPR connection. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_sudph_init_failed">Error initializing the SUDPH connection. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_dmsg_listen_failed">The DMSG connection failed. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_tp_disc_unavailable">It was not possible to access the transport discovery service. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_failed_to_start_router">It was not possible to start the router. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_failed_to_setup_hv_gateway">Failed to start the RPC server for the hypervisor. This may happen if there is no network connectivity or if there are temporal problems accessing any of the service components.</string>
    <string name="skywiremob_error_unknown">There was an unexpected error.</string>
    <string name="skywiremob_error_visor_not_running">The local Skywire visor is not running. This error should be automatically solved by restarting the VPN.</string>
    <string name="skywiremob_error_invalid_remote_pk">The remote public key is not valid. Are you are connecting to a valid VPN server?</string>
    <string name="skywiremob_error_failed_to_save_transport">It was not possible to create a transport to access the VPN server. Do you have internet connection and are connecting to a valid VPN server?</string>
    <string name="skywiremob_error_vpn_server_unavailable">Unable to connect with the VPN server. It may be temporally unavailable or there may be no network connectivity to access it.</string>
    <string name="skywiremob_error_vpn_client_not_running">The local VPN client is not running. This error should be automatically solved by restarting the VPN.</string>
    <string name="skywiremob_error_wrong_password">The server has reported that the password is invalid.</string>
    <string name="skywiremob_error_handshake_failed">The handshake procedure with the VPN server failed. This may happen if the server is not compatible with the current version of the app or if the server refused the connection.</string>
    <string name="skywiremob_error_invalid_addr">There was an error connecting the app with the local visor. This error should be automatically solved by restarting the VPN.</string>
    <string name="skywiremob_error_already_listening_udp">Already listening UDP. This error should be automatically solved by restarting the VPN.</string>
    <string name="skywiremob_error_udp_listen_failed">UPD failed. This error should be automatically solved by restarting the VPN.</string>
    <string name="vpn_service_state_preparing">Preparing</string>
    <string name="vpn_service_state_restoring">Restoring</string>
    <string name="vpn_service_state_finishing">Finishing</string>
    <string name="vpn_state_disconnected">Disconnected</string>
    <string name="vpn_state_connecting">Connecting</string>
    <string name="vpn_state_connected">Connected</string>
    <string name="vpn_state_restarting">Restoring</string>
    <string name="vpn_state_disconnecting">Disconnecting</string>
    <string name="vpn_state_error">Error</string>
    <string name="vpn_state_details_off">The SkywireVPN protection is disconnected.</string>
    <string name="vpn_state_details_initializing">Making initial preparations.</string>
    <string name="vpn_state_details_waiting_previous_instance_stop">Waiting for the visor to be ready.</string>
    <string name="vpn_state_details_checking_connectivity">Checking network connectivity.</string>
    <string name="vpn_state_details_waiting_connectivity">Waiting for network connectivity.</string>
    <string name="vpn_state_details_starting_visor">Starting the SkywireVPN visor.</string>
    <string name="vpn_state_details_starting_vpn_app">Starting the SkywireVPN network connector.</string>
    <string name="vpn_state_details_additional_visor_initializations">Finishing the SkywireVPN visor initialization.</string>
    <string name="vpn_state_details_connecting">Establishing remote connection.</string>
    <string name="vpn_state_details_connected">VPN protection active.</string>
    <string name="vpn_state_details_restoring">Restarting the VPN connection.</string>
    <string name="vpn_state_details_restoring_service">Restarting the VPN service.</string>
    <string name="vpn_state_details_disconnecting">Closing the VPN connection.</string>
    <string name="vpn_state_details_disconnected">The VPN connection has been closed.</string>
    <string name="vpn_state_details_error">There has been an error with the SkywireVPN service.</string>
    <string name="vpn_state_details_blocking_error">There has been an error with the SkywireVPN service. The network will be blocked until stopping the service.</string>
    <string name="vpn_coordinator_invalid_credentials_error">Invalid public key: </string>
    <string name="vpn_service_network_unavailable_warning">The network will be unavailable while the VPN is starting.</string>
    <string name="vpn_service_network_protection_error">It was not possible to protect the network.</string>
    <string name="vpn_timeout_error">Unable to connect to the VPN server.</string>
    <string name="vpn_connection_finished_error">The VPN connection has been closed unexpectedly.</string>
    <string name="vpn_already_running_warning">The VPN is already running.</string>
    <string name="vpn_no_apps_to_protect_warning">You have not selected specific applications to protect. All applications will be protected.</string>
    <string name="vpn_no_apps_to_ignore_warning">You have not selected specific applications to ignore. All applications will be protected.</string>
    <string name="vpn_service_configuring_app_rules_error">It was not possible to configure the rules for the VPN app.</string>
    <string name="tmp_main_page_start">Start</string>
    <string name="tmp_main_page_stop">Stop</string>
    <string name="tmp_main_page_select">Select server</string>
    <string name="tmp_main_page_select_apps">Select apps</string>
    <string name="tmp_main_page_settings">Settings</string>
    <string name="tmp_main_page_stopping">Stopping the service...</string>
    <string name="tmp_main_page_can_not_stop">As the VPN connection was started using the system options, it is not possible to stop it using this page.</string>
    <string name="tmp_status_connected_title">Your connection is currently:</string>
    <string name="tmp_status_connected_current_ip_title">Current IP:</string>
    <string name="tmp_status_connected_current_country_title">Current Country:</string>
    <string name="tmp_status_connected_waiting">Waiting for VPN...</string>
    <string name="tmp_status_connected_started_by_the_system">As the VPN connection was started using the system options, it cannot be stopped using this screen. For stopping the VPN, please use the same system options used for stating it.</string>
    <string name="tmp_options_apps_title">Protect specific apps</string>
    <string name="tmp_options_apps_description">Currently the VPN protection covers all your apps. Use this option if you want to protect only some applications or if you want to ignore them.</string>
    <string name="tmp_options_kill_switch_title">Kill switch</string>
    <string name="tmp_options_kill_switch_description">If active, the app will try to block all network connections if the VPN protection is stopped unexpectedly, to ensure privacy. Note: the operating system may prevent this option from working.</string>
    <string name="tmp_options_reset_after_errors_title">Reset after errors.</string>
    <string name="tmp_options_reset_after_errors_description">If active, the service will be restarted automatically in case of error. You may not have internet connection while the service is being restarted.</string>
    <string name="tmp_options_protect_before_connecting_title">Protect before finishing connecting.</string>
    <string name="tmp_options_protect_before_connecting_description">If active, no data will be sent unprotected after you press the connection button, but the internet connection will be unavailable for a moment.</string>
    <string name="tmp_options_start_on_boot_title">Start on boot.</string>
    <string name="tmp_options_start_on_boot_description">The VPN protection will be automatically started shortly after turning on the device.</string>
</resources>