<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.skywire.skycoin.vpn.activities.settings.SettingsOption
                android:id="@+id/optionApps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                app:box_row_type="single"
                app:description="@string/tmp_options_apps_description"
                app:title="@string/tmp_options_apps_title" />

            <com.skywire.skycoin.vpn.activities.settings.SettingsOption
                android:id="@+id/optionKillSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:box_row_type="top"
                app:description="@string/tmp_options_kill_switch_description"
                app:title="@string/tmp_options_kill_switch_title" />

            <com.skywire.skycoin.vpn.activities.settings.SettingsOption
                android:id="@+id/optionResetAfterErrors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:description="@string/tmp_options_reset_after_errors_description"
                app:title="@string/tmp_options_reset_after_errors_title" />

            <com.skywire.skycoin.vpn.activities.settings.SettingsOption
                android:id="@+id/optionProtectBeforeConnecting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:description="@string/tmp_options_protect_before_connecting_description"
                app:title="@string/tmp_options_protect_before_connecting_title" />

            <com.skywire.skycoin.vpn.activities.settings.SettingsOption
                android:id="@+id/optionStartOnBoot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:box_row_type="bottom"
                app:description="@string/tmp_options_start_on_boot_description"
                app:title="@string/tmp_options_start_on_boot_title" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
