<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/time_rounded_box"
                android:orientation="horizontal"
                android:paddingLeft="14dp"
                android:paddingTop="7dp"
                android:paddingRight="14dp"
                android:paddingBottom="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/material_font"
                    android:gravity="center_vertical"
                    android:text="\ue01b"
                    android:textColor="@color/subtle_text"
                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/textTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01:05:30"
                    android:textColor="@color/subtle_text"
                    android:textSize="@dimen/small_text_size"
                    android:translationY="-1dp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/status_page_horizontal_margin"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/status_page_horizontal_margin"
                android:gravity="center_horizontal"
                android:text="@string/tmp_status_connected_title"
                android:textColor="@color/subtle_text"
                android:textSize="@dimen/small_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/status_page_horizontal_margin"
                android:layout_marginRight="@dimen/status_page_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textState"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="Connected"
                    android:textAllCaps="true"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/imageStateLine"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:alpha="0.5"
                    android:background="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/textStateDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/status_page_horizontal_margin"
                android:layout_marginRight="@dimen/status_page_horizontal_margin"
                android:gravity="center_horizontal"
                android:text="Connection stablished"
                android:textSize="@dimen/mini_text_size" />

            <TextView
                android:id="@+id/textLastError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/status_page_horizontal_margin"
                android:layout_marginTop="5dp"
                android:layout_marginRight="@dimen/status_page_horizontal_margin"
                android:gravity="center_horizontal"
                android:text="Last error:"
                android:textColor="@color/red"
                android:textSize="@dimen/mini_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/status_page_horizontal_margin"
                android:layout_marginTop="20dp"
                android:layout_marginRight="@dimen/status_page_horizontal_margin"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/tmp_status_connected_current_ip_title"
                        android:textColor="@color/subtle_text"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/textWaitingIp"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/tmp_status_connected_waiting"
                        android:textSize="@dimen/micro_text_size" />

                    <LinearLayout
                        android:id="@+id/ipContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textIp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:maxLines="1"
                            android:text="---" />

                        <ProgressBar
                            android:id="@+id/progressIp"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:indeterminate="true"
                            android:indeterminateTintMode="src_in"
                            android:indeterminateTint="@color/normal_text"
                            android:layout_marginLeft="5dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/tmp_status_connected_current_country_title"
                        android:textColor="@color/subtle_text"
                        android:textSize="@dimen/small_text_size" />

                    <TextView
                        android:id="@+id/textWaitingCountry"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/tmp_status_connected_waiting"
                        android:textSize="@dimen/micro_text_size" />

                    <LinearLayout
                        android:id="@+id/countryContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="center_horizontal"
                            android:maxLines="1"
                            android:text="---" />

                        <ProgressBar
                            android:id="@+id/progressCountry"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_vertical"
                            android:indeterminate="true"
                            android:indeterminateTintMode="src_in"
                            android:indeterminateTint="@color/normal_text"
                            android:layout_marginLeft="5dp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <com.skywire.skycoin.vpn.activities.start.connected.StopButton
                android:id="@+id/buttonStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textStartedByTheSystem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="@dimen/status_page_horizontal_margin"
                android:layout_marginRight="@dimen/status_page_horizontal_margin"
                android:text="@string/tmp_status_connected_started_by_the_system"
                android:textSize="@dimen/mini_text_size" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
